# hello-my-zsh

./: README.md  alias.yaml  create_zsh.py  hello-my-zsh.py  import_zsh.py  loader.py  pyproject.toml
models/: alias.py
services/: alias_service.py
